--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -319,6 +319,7 @@ background-color: rgba(31,31,30,0.8);
 }
 
 .apprenant{
+position: relative;
 padding: 20px;
 margin-top: 3em;
 display: flex;
@@ -341,13 +342,34 @@ width:100%;
 height: auto;
 padding:0.5em;
 background-color: rgba(250,250,250,0.8);
-position: relative;
+position: absolute;
+    top: 0;
+    left: 250px;
 -moz-box-shadow: 2px 1px 2px 0px #9b9b9b;
 -webkit-box-shadow: 2px 1px 2px 0px #9b9b9b;
 -o-box-shadow: 2px 1px 2px 0px #9b9b9b;
 box-shadow: 0px 0px 2px #9b9b9b;
-filter:progid:DXImageTransform.Microsoft.Shadow(color=#9b9b9b, Direction=116, Strength=2);  
+filter:progid:DXImageTransform.Microsoft.Shadow(color=#9b9b9b, Direction=116, Strength=2); 
+    z-index: 999;
 }
+
+.back .infoBox {
+    left: -250px;
+}
+
+/* ---- media query responsive smartphone --- */
+
+
+
+/* --------- */
+
+.apprenant img {
+    transition: .4s;
+}
+.apprenant img:hover {
+    filter: brightness(125%);
+}
+
 
 .front .progress-bar{
 background-color: #009b9d!important;
